[package]
name = "$PROJ_NAME$_glue"
version = "1.0.0"
edition = "2018"

[dependencies]
libc = "0.2"
smallvec = "0.6"

[dependencies.brinicle_glue]
path = "../../../icicle-basics/rust/glue"

[dependencies.$PROJ_NAME$_kernel]
path = "../kernel"

[lib]
crate-type = ["staticlib"]
name = "$PROJ_NAME$_glue"
